--- a/resources/assets/sass/components/media-queries.scss
+++ b/resources/assets/sass/components/media-queries.scss
@@ -1,6 +1,7 @@
 @media screen and (max-width: 700px) {
 
   .slideshow {
+      height: 600px;
       background-image: url('../../images/video-cover-for-mobile.jpg');
       background-size: cover;
       background-repeat: no-repeat;
@@ -12,9 +13,10 @@
 
       .logo {
           left: 20px;
-          top: 25px;
-          width: 34%;
+          top: 0;
+          width: 42%;
           max-width: none;
+          z-index: 9999;
       }     
 
       #top_video {
@@ -22,11 +24,13 @@
       }  
 
       #intro-title {
-        width: 85%;
-        text-align: center;   
+        top: 30%;
+        left: 0;
+        width: 100%;
+        padding: 20px;   
         
         img {
-          width: 75%;          
+          width: 100%;          
         }     
       }
   }
